--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,18 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.13.2",
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-session": "^1.18.2",
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.2",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-reddit": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
