--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.2.0",
     "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.12.0",
+    "react-spinners": "^0.17.0",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
